Agregando metodos para mejor manejo de los tests